samples/_failures_safe/1761703622_f79586_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba1b1bf4.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_ba1b1bf4.c:146:9: error: expected expression at end of input
  146 |         printf("%d. '%s' - %d occurrences\n",
      |         ^~~~~~
./samples/SAFE/__tmp_ba1b1bf4.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ba1b1bf4.c:146:9: error: expected declaration or statement at end of input
